Speeding up timeline content crystal opening to avoid waiting too long to access the cards content.

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -78,7 +78,7 @@
       transition: max-width 1s ease-in;
       transition-delay: $delayStart;
 
-      $delayStart: $delayStart + 0.2s;
+      $delayStart: $delayStart - 0.4s;
     }
 
     .timeline-content {
@@ -225,7 +225,7 @@
         .style-crystal {
           @for $i from 17 through 20 {
             &.cry#{$i} {
-              transition-delay: calc(var(--delay) - 0.6s);
+              transition-delay: calc(var(--delay) - 0.1s);
             }
           }
         }
